--- a/Assets/Scenes/Flogas_Dungeon.yaml
+++ b/Assets/Scenes/Flogas_Dungeon.yaml
@@ -1526,7 +1526,7 @@ GameObjects:
     Com_Transform:
       Translation: [0, -0.583999753, -9.61990929]
       Rotation: [90, -0, 0]
-      Scale: [22.521492, 26.0779991, 1.79999995]
+      Scale: [22.5214901, 26.0779991, 1.79999995]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -1651,8 +1651,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-7.69327307, 1.31196868, -8.28250313]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.0551844947, 0.0456037074, 0.268359751]
+      Rotation: [6.24535608, 37.4362946, 5.37620735e-07]
+      Scale: [0.0551847853, 0.0456037335, 0.268360108]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -1689,8 +1689,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-3.36255193, 2.15149903, 1.52762651]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [0.120190933, 0.0885837898, 0.582537174]
+      Rotation: [6.24535561, 37.4362907, 5.37620849e-07]
+      Scale: [0.120191589, 0.08858376, 0.582538664]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2046,8 +2046,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [3.45357752, 2.11951017, 1.27384841]
-      Rotation: [11.3099327, -0, 0]
-      Scale: [0.119995825, 0.0884001702, 0.582768917]
+      Rotation: [6.24535608, 37.4362946, 5.37620792e-07]
+      Scale: [0.119996458, 0.0884001851, 0.582769811]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2084,8 +2084,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [7.93538809, 1.34698355, -8.84075165]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.0600193553, 0.0712423697, 0.582833767]
+      Rotation: [6.24535608, 37.4362984, 5.37620792e-07]
+      Scale: [0.0600196794, 0.0712423548, 0.582835078]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2122,8 +2122,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [8.08104706, 1.34008193, -3.44539356]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.0599988699, 0.0712502748, 0.582768917]
+      Rotation: [6.24535608, 37.4362946, 5.37620735e-07]
+      Scale: [0.0599992052, 0.0712502673, 0.582769811]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2160,8 +2160,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-7.58388233, 1.30740726, -0.59903425]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.060011711, 0.0712637827, 0.582833767]
+      Rotation: [6.24535656, 37.4362984, 5.37620792e-07]
+      Scale: [0.0600120202, 0.0712637976, 0.582835078]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2198,8 +2198,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [8.8090992, 2.12478662, -5.06439114]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [0.120088786, 0.0884067193, 0.582768917]
+      Rotation: [6.24535513, 37.4362946, 5.37620792e-07]
+      Scale: [0.120089404, 0.0884067118, 0.582769811]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2236,8 +2236,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.99510837, 2.0846324, -11.0818748]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.120048754, 0.0884145722, 0.582768917]
+      Rotation: [6.24535608, 37.4362946, 5.37620792e-07]
+      Scale: [0.120049424, 0.0884145647, 0.582769811]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2274,8 +2274,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-2.36362243, 2.15001464, -11.0893078]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.0987851769, 0.117266141, 0.582858145]
+      Rotation: [6.24535561, 37.4362946, 5.37620792e-07]
+      Scale: [0.0987856761, 0.117266193, 0.58285892]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2312,8 +2312,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-8.99177265, 2.11422968, -4.94483566]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [0.101392373, 0.119524673, 0.642085075]
+      Rotation: [6.24535608, 37.4362946, 5.37620849e-07]
+      Scale: [0.101392888, 0.11952471, 0.642085731]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2350,8 +2350,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.39247227, 2.56994104, 0.420668274]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.167933017, 0.132778451, 0.582858145]
+      Rotation: [6.24535561, 37.4362984, 5.37620849e-07]
+      Scale: [0.167933866, 0.132778436, 0.58285892]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2388,8 +2388,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-1.08791733, 2.59111428, 0.498315632]
-      Rotation: [11.3099327, -0, 0]
-      Scale: [0.171310037, 0.129114926, 0.582768917]
+      Rotation: [6.24535608, 37.4362946, 5.37620849e-07]
+      Scale: [0.171310961, 0.129115015, 0.582769811]
     Com_VIBuffer:
       {}
     Effect_Setting:
