--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="..\Public\Background.h" />
     <ClInclude Include="..\public\BackPackHud.h" />
     <ClInclude Include="..\Public\BasicEffect.h" />
+    <ClInclude Include="..\public\BossMovie.h" />
     <ClInclude Include="..\Public\Camera_Fly.h" />
     <ClInclude Include="..\Public\Camera_Follow.h" />
     <ClInclude Include="..\Public\Camera_Lobby.h" />
@@ -371,6 +372,7 @@
     <ClCompile Include="..\Private\Background.cpp" />
     <ClCompile Include="..\private\BackPackHud.cpp" />
     <ClCompile Include="..\Private\BasicEffect.cpp" />
+    <ClCompile Include="..\private\BossMovie.cpp" />
     <ClCompile Include="..\Private\Camera_Fly.cpp" />
     <ClCompile Include="..\Private\Camera_Follow.cpp" />
     <ClCompile Include="..\Private\Camera_Lobby.cpp" />
