--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -487,6 +487,9 @@
     <ClInclude Include="..\public\SoundHud.h">
       <Filter>04.UI\SoundHUD</Filter>
     </ClInclude>
+    <ClInclude Include="..\public\BossMovie.h">
+      <Filter>04.UI\BossMovie</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -959,6 +962,9 @@
     </ClCompile>
     <ClCompile Include="..\private\SoundHud.cpp">
       <Filter>04.UI\SoundHUD</Filter>
+    </ClCompile>
+    <ClCompile Include="..\private\BossMovie.cpp">
+      <Filter>04.UI\BossMovie</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1434,6 +1440,9 @@
     </Filter>
     <Filter Include="04.UI\SoundHUD">
       <UniqueIdentifier>{4cbaa979-ec9c-41c1-8f9d-b30a880c1497}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="04.UI\BossMovie">
+      <UniqueIdentifier>{f2898eae-bb4e-4219-9268-410bec8fe688}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
