--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -201,6 +201,7 @@
     <ClInclude Include="..\public\ComboIcon.h" />
     <ClInclude Include="..\public\ConsumItemHud.h" />
     <ClInclude Include="..\Public\DarkKnight.h" />
+    <ClInclude Include="..\Public\DashAtt.h" />
     <ClInclude Include="..\public\DecalCrash.h" />
     <ClInclude Include="..\public\DmgVIBuffer.h" />
     <ClInclude Include="..\Public\DropRock.h" />
@@ -293,6 +294,7 @@
     <ClInclude Include="..\public\Obb.h" />
     <ClInclude Include="..\Public\Portal.h" />
     <ClInclude Include="..\Public\PortalUI.h" />
+    <ClInclude Include="..\Public\Pummel_foot.h" />
     <ClInclude Include="..\public\QuestHud.h" />
     <ClInclude Include="..\public\QuickSlot.h" />
     <ClInclude Include="..\public\ReinforceFall.h" />
@@ -379,6 +381,7 @@
     <ClCompile Include="..\private\ConsumItemHud.cpp" />
     <ClCompile Include="..\private\Character.cpp" />
     <ClCompile Include="..\Private\DarkKnight.cpp" />
+    <ClCompile Include="..\Private\DashAtt.cpp" />
     <ClCompile Include="..\private\DecalCrash.cpp" />
     <ClCompile Include="..\private\DmgVIBuffer.cpp" />
     <ClCompile Include="..\Private\DropRock.cpp" />
@@ -471,6 +474,7 @@
     <ClCompile Include="..\private\Obb.cpp" />
     <ClCompile Include="..\Private\Portal.cpp" />
     <ClCompile Include="..\Private\PortalUI.cpp" />
+    <ClCompile Include="..\Private\Pummel_foot.cpp" />
     <ClCompile Include="..\private\QuestHud.cpp" />
     <ClCompile Include="..\private\QuickSlot.cpp" />
     <ClCompile Include="..\private\ReinforceFall.cpp" />
