--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -484,6 +484,12 @@
     <ClInclude Include="..\Public\Skull.h">
       <Filter>02.GameObjects\Character\Enemy\Skull</Filter>
     </ClInclude>
+    <ClInclude Include="..\Public\Pummel_foot.h">
+      <Filter>05.Effect\Ursa\Pummel_foot</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\DashAtt.h">
+      <Filter>05.Effect\Ursa\DashAtt</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -953,6 +959,12 @@
     </ClCompile>
     <ClCompile Include="..\Private\Skull.cpp">
       <Filter>02.GameObjects\Character\Enemy\Skull</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\Pummel_foot.cpp">
+      <Filter>05.Effect\Ursa\Pummel_foot</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\DashAtt.cpp">
+      <Filter>05.Effect\Ursa\DashAtt</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1425,6 +1437,12 @@
     </Filter>
     <Filter Include="02.GameObjects\Character\Enemy\Skull">
       <UniqueIdentifier>{abd3dc63-6a78-4e8c-af4f-4a68c4c5cf42}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\Ursa\Pummel_foot">
+      <UniqueIdentifier>{9d2028c2-a192-492b-a017-4c65b57c2cf4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\Ursa\DashAtt">
+      <UniqueIdentifier>{52888ddf-de1d-4cc2-82e6-f89d3b72887a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
