--- a/Assets/Scenes/TestRoomLee.yaml
+++ b/Assets/Scenes/TestRoomLee.yaml
@@ -130,9 +130,9 @@ GameObjects:
     PassIndex: 0
     BillBord: false
     Com_Transform:
-      Translation: [0, 0.00564939762, -3]
-      Rotation: [4.96316206e-05, -0, 4.96323046e-05]
-      Scale: [8, 0.400999904, 8]
+      Translation: [-4.36292219, -7.94019616e-06, -10]
+      Rotation: [-179.999893, -0, -179.999893]
+      Scale: [7.9998765, 0.400999486, 7.9998765]
     Com_Decal:
       {}
     Effect_Setting:
@@ -148,103 +148,19 @@ GameObjects:
       DistortionScale: 0.800000012
       DistortionBias: 0.5
       FadeOut: true
-      FadeOutDuration: 10
-      FadeOutStratTime: 10
+      FadeOutDuration: 8
+      FadeOutStratTime: 2
       FadeIn: true
-      FadeInDuration: 10
+      FadeInDuration: 2
       FadeInStratTime: 0
-      EffectDuration: 20
+      EffectDuration: 10
       SpriteNumX: 0
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
       OffsetColor: [0.347826004, 0, 1, 1]
-  - Name: E_IIBlood
-    UUID: 12569516535572226087
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 0
-    BillBord: false
-    Com_Transform:
-      Translation: [0, 1, -1]
-      Rotation: [0, -0, 0]
-      Scale: [0.99855417, 1.0005976, 1.0012449]
-    Com_RectInstance:
-      Shape: 1
-      InstNum: 100
-      Color: [0.704278529, 0.0156028755, 0, 0]
-      Speed: 1.79999995
-      LifeTime: 2.0999999
-      Size: 0.699999988
-      StartRadian: 0
-      RadiationAngle: 50
-      LerpColor: false
-      SrcColor: [0.753623188, 0.0327662192, 0, 0]
-      DestColor: [0.659420252, 0, 0, 0]
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\001.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_blood_005_TEX_CJH_1.png
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [2.29999995, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0
-      DistortionBias: 0
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0, 0, 0, 0]
-  - Name: E_MeteoDropAfter
-    UUID: 15159987855506597533
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 0
-    BillBord: false
-    Com_Transform:
-      Translation: [-1.28505898, 0, 0]
-      Rotation: [0, -0, 0]
-      Scale: [1.20000005, 0.699999988, 1.20000005]
-    Com_Decal:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\019.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Impact_006_TEX_KKJ.png
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: true
-      FadeOutDuration: 2
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 2
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0, 0, 0, 0]
+    Children:
+      - 15570142538041314338
   - Name: E_Ursa_SoilDust
     UUID: 5305419133825331868
     Active: true
@@ -255,8 +171,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.41224837, 0.540380895, 0.14303574]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [0.240763605, 0.545094728, 0.456344783]
+      Rotation: [-4.83656883, -7.75393581, -1.07706498e-07]
+      Scale: [0.16369164, 0.408916384, 0.278309792]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -310,44 +226,6 @@ GameObjects:
         CharacterController: false
     RenderGroup: 1
     FrustumRange: 1
-  - Name: E_UrsaeDust
-    UUID: 5120974272251489655
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 2
-    BillBord: true
-    Com_Transform:
-      Translation: [-0.0168395545, 1.0680685, 0.160352141]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [0.617544532, 0.435210705, 1.02604365]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Smoke3.dds
-      TextureMaskPath: ""
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.25
-      FadeOut: true
-      FadeOutDuration: 2.75
-      FadeOutStratTime: 0.25
-      FadeIn: true
-      FadeInDuration: 0.25
-      FadeInStratTime: 0
-      EffectDuration: 3
-      SpriteNumX: 8
-      SpriteNumY: 8
-      SpriteTotal: 64
-      SpriteSpeed: 70
-      OffsetColor: [0, 0, 0, -0.5]
   - Name: Skull
     UUID: 7420576480574651297
     Active: true
@@ -403,48 +281,7 @@ GameObjects:
       Gold: 100
     RenderGroup: 1
     FrustumRange: 1
-  - Name: E_SwordAura
-    UUID: 9755036145278944647
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [2.63986111, 0.717541754, -0.414763659]
-      Rotation: [0, -0, -9.9999876]
-      Scale: [3.49999976, 0.49999243, 2]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Effect\
-      MeshFileName: RevivalLine2.fbx
-      HasCollider: false
-      EffectFilePath: ..\..\Assets\Textures\Effect\Mask\FX_blizzardDecal_01_TEX_KJS.png
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_blizzardDecal_01_TEX_KJS.png
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_fire01_Step_TEX.tga
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [-0.200000003, -0.300000012, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0.304347664, 0, 0.333333313, 0.649999976]
-  - Name: RectInst
+  - Name: E_Phase2Inst
     UUID: 205108304507836699
     Active: true
     Layer: Default
@@ -453,21 +290,21 @@ GameObjects:
     PassIndex: 0
     BillBord: false
     Com_Transform:
-      Translation: [0, 0.300000012, -4.30000019]
+      Translation: [0.200000003, 0.550000012, 0]
       Rotation: [0, -0, 0]
       Scale: [1, 1, 1]
     Com_RectInstance:
-      Shape: 1
+      Shape: 0
       InstNum: 100
-      Color: [0.682419181, 0.188405812, 1, 0]
+      Color: [-0.242261112, 0, -0.377289534, 0]
       Speed: 5
-      LifeTime: 5
-      Size: 1.39999998
+      LifeTime: 1
+      Size: 0.5
       StartRadian: -90
-      RadiationAngle: 90
-      LerpColor: false
-      SrcColor: [0, 0, 0, 0]
-      DestColor: [1, 1, 1, 0]
+      RadiationAngle: 180
+      LerpColor: true
+      SrcColor: [0.60869503, 0, 1, 0]
+      DestColor: [0.0982985422, 0, 0.173913062, 0]
     Effect_Setting:
       TextureDiffusePath: ""
       TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\Trun_FX_Trail02_Tex_HKJ.jpg
@@ -491,7 +328,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
-      OffsetColor: [0, 0, 0, 0]
+      OffsetColor: [1, 1, 1, 0]
   - Name: E_Phase2Aura
     UUID: 15570142538041314338
     Active: true
@@ -501,7 +338,7 @@ GameObjects:
     PassIndex: 1
     BillBord: false
     Com_Transform:
-      Translation: [0, -0.100000001, -3.0999999]
+      Translation: [0, 0.0500000007, 0]
       Rotation: [0, -0, 0]
       Scale: [2.5, 4, 2.5]
     Com_Model:
@@ -524,6 +361,47 @@ GameObjects:
       FadeOut: false
       FadeOutDuration: 0
       FadeOutStratTime: 0
+      FadeIn: true
+      FadeInDuration: 5
+      FadeInStratTime: 0
+      EffectDuration: 50
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [0.491492987, 0, 0.565217376, 0.150000006]
+  - Name: E_Phase2Twist
+    UUID: 8166158456807153502
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 1
+    BillBord: false
+    Com_Transform:
+      Translation: [-0.889394343, 0.550000012, -0.318540484]
+      Rotation: [0, -16.2989979, 0]
+      Scale: [0.499995917, 0.499999762, 0.499995917]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\
+      MeshFileName: TwistMesh3.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\FX_aura_001_TEX_KJS.dds
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\001.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Impact_001_TEX_KKJ.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_AEAura_001_TEX_PHS.tga
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [0.699999988, 0.800000012, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0
+      DistortionBias: 5.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
       FadeIn: false
       FadeInDuration: 0
       FadeInStratTime: 0
@@ -532,4 +410,82 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
-      OffsetColor: [0.491492987, 0, 0.565217376, 0.150000006]
+      OffsetColor: [0.4710145, 0.0682629794, 0.435992837, -0.0500000007]
+    Children:
+      - 16938390492324315338
+  - Name: Empty Object
+    UUID: 16938390492324315338
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 1
+    BillBord: true
+    Com_Transform:
+      Translation: [0, 0.300000012, 0]
+      Rotation: [0, -0, 0]
+      Scale: [0.899999976, 2, 1]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\FX_aura_001_TEX_KJS.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Circle_mask01.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_AuraTile_001_TEX_KKJ1.png
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [0.699999988, 0.899999976, 0]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [0.231363475, 0.00945179351, 0.434782624, -0.479999989]
+  - Name: FireWall
+    UUID: 13960472319751028935
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 1
+    BillBord: false
+    Com_Transform:
+      Translation: [0, 2.05100012, -3]
+      Rotation: [0, -0, 0]
+      Scale: [12.1999998, 7.30000019, 1]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\AEWave2.png
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Trail_Clamp_002_TEX_PHS.tga
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_fire_003_TEX_CJH_tile.tga
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [0.100000001, 0.200000003, 2.29999995]
+      Distortion1: [0.100000001, -0.300000012]
+      Distortion2: [0.100000001, 0.200000003]
+      Distortion3: [0.100000001, -1.5]
+      DistortionScale: 0
+      DistortionBias: 0.100000001
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [0.155009404, 0, 0.297101438, 0.629999995]
