--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -207,6 +207,7 @@
     <ClInclude Include="..\public\DmgVIBuffer.h" />
     <ClInclude Include="..\Public\DropRock.h" />
     <ClInclude Include="..\Public\DropRockSmall.h" />
+    <ClInclude Include="..\Public\Dustparticle_Cone.h" />
     <ClInclude Include="..\Public\EAFireBall.h" />
     <ClInclude Include="..\Public\EffectBloodDecal.h" />
     <ClInclude Include="..\Public\EffectDropRock.h" />
@@ -393,6 +394,7 @@
     <ClCompile Include="..\private\DmgVIBuffer.cpp" />
     <ClCompile Include="..\Private\DropRock.cpp" />
     <ClCompile Include="..\Private\DropRockSmall.cpp" />
+    <ClCompile Include="..\Private\Dustparticle_Cone.cpp" />
     <ClCompile Include="..\Private\EAFireBall.cpp" />
     <ClCompile Include="..\Private\EffectBlackhole.cpp" />
     <ClCompile Include="..\Private\EffectBlood.cpp" />
