--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -202,9 +202,6 @@
     <ClInclude Include="..\public\Gold.h">
       <Filter>04.UI\Gold</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\Equipment.h">
-      <Filter>02.GameObjects\Character\Equip</Filter>
-    </ClInclude>
     <ClInclude Include="..\public\Skill_Player.h">
       <Filter>02.GameObjects\Character\StateMachine\00.Player\04.Skill</Filter>
     </ClInclude>
@@ -507,6 +504,12 @@
     </ClInclude>
     <ClInclude Include="..\public\BossMovie.h">
       <Filter>04.UI\BossMovie</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\Equipment.h">
+      <Filter>02.GameObjects\Character\Equip\Weapon</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\Dustparticle_Cone.h">
+      <Filter>05.Effect\Ursa\Pummel_foot</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -1001,6 +1004,9 @@
     </ClCompile>
     <ClCompile Include="..\private\BossMovie.cpp">
       <Filter>04.UI\BossMovie</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\Dustparticle_Cone.cpp">
+      <Filter>05.Effect\Ursa\Pummel_foot</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
