--- a/Assets/Scenes/QuestUI.yaml
+++ b/Assets/Scenes/QuestUI.yaml
@@ -46,6 +46,7 @@ GameObjects:
       TextureNoisePath: ..\..\Assets\UITexture\BackImg\Window_BG_Quest.dds
       TextureAnyPath: ""
       Color: [0, 0, 0, 1]
+      Sprite: [0.100000001, 0, 0, 0]
     Children:
       - 897123930233956990
       - 12889665759808604316
@@ -87,6 +88,7 @@ GameObjects:
       TextureNoisePath: ""
       TextureAnyPath: ""
       Color: [0, 0, 0, 1]
+      Sprite: [0.100000001, 0, 0, 0]
     Children:
       - 8499379159806179817
       - 13067805310386615929
@@ -100,7 +102,7 @@ GameObjects:
     PassIndex: 0
     Hovering: false
     Com_Transform:
-      Position: [1051.73877, 286.065582]
+      Position: [1051.73877, 280.860718]
       Size: [344.843445, 50]
     Com_Text:
       Text: QuestName
@@ -109,7 +111,7 @@ GameObjects:
       LayerDepth: 0
       IsCenter: false
       ShaderCut: false
-      IsKorean: false
+      IsKorean: true
   - Name: QuestPurpose
     UUID: 13067805310386615929
     Active: false
@@ -120,7 +122,7 @@ GameObjects:
     PassIndex: 0
     Hovering: false
     Com_Transform:
-      Position: [1067.39075, 323.161682]
+      Position: [1067.39075, 307.547272]
       Size: [500, 100]
     Com_Text:
       Text: QuestPurPose
@@ -129,7 +131,7 @@ GameObjects:
       LayerDepth: 0
       IsCenter: false
       ShaderCut: false
-      IsKorean: false
+      IsKorean: true
   - Name: QuestShortcut
     UUID: 12805142118666484563
     Active: false
@@ -148,6 +150,7 @@ GameObjects:
       TextureNoisePath: ""
       TextureAnyPath: ""
       Color: [0, 0, 0, 1]
+      Sprite: [0.100000001, 0, 0, 0]
     Children:
       - 10117224854208029290
       - 11513149226949606065
@@ -161,7 +164,7 @@ GameObjects:
     PassIndex: 0
     Hovering: false
     Com_Transform:
-      Position: [1051.73877, 414.215454]
+      Position: [1051.73877, 409.010651]
       Size: [344.843445, 50]
     Com_Text:
       Text: QuestName
@@ -170,7 +173,7 @@ GameObjects:
       LayerDepth: 0
       IsCenter: false
       ShaderCut: false
-      IsKorean: false
+      IsKorean: true
   - Name: QuestPurpose
     UUID: 11513149226949606065
     Active: false
@@ -181,7 +184,7 @@ GameObjects:
     PassIndex: 0
     Hovering: false
     Com_Transform:
-      Position: [1060.43433, 451.311554]
+      Position: [1060.43433, 437.432037]
       Size: [500, 100]
     Com_Text:
       Text: QuestPurPose
@@ -190,7 +193,7 @@ GameObjects:
       LayerDepth: 0
       IsCenter: false
       ShaderCut: false
-      IsKorean: false
+      IsKorean: true
   - Name: QuestShortcut
     UUID: 15542191811747929715
     Active: false
@@ -209,6 +212,7 @@ GameObjects:
       TextureNoisePath: ""
       TextureAnyPath: ""
       Color: [0, 0, 0, 1]
+      Sprite: [0.100000001, 0, 0, 0]
     Children:
       - 12415205669606939399
       - 5950913508321936982
@@ -222,7 +226,7 @@ GameObjects:
     PassIndex: 0
     Hovering: false
     Com_Transform:
-      Position: [1053.47791, 350.140533]
+      Position: [1053.47791, 344.935669]
       Size: [344.843445, 50]
     Com_Text:
       Text: QuestName
@@ -231,7 +235,7 @@ GameObjects:
       LayerDepth: 0
       IsCenter: false
       ShaderCut: false
-      IsKorean: false
+      IsKorean: true
   - Name: QuestPurpose
     UUID: 5950913508321936982
     Active: false
@@ -242,7 +246,7 @@ GameObjects:
     PassIndex: 0
     Hovering: false
     Com_Transform:
-      Position: [1063.9126, 387.236633]
+      Position: [1063.9126, 375.092041]
       Size: [500, 100]
     Com_Text:
       Text: QuestPurPose
@@ -251,4 +255,4 @@ GameObjects:
       LayerDepth: 0
       IsCenter: false
       ShaderCut: false
-      IsKorean: false
+      IsKorean: true
