--- a/Assets/Scenes/m_pxVertices2.yaml
+++ b/Assets/Scenes/m_pxVertices2.yaml
@@ -8,14 +8,15 @@ GameObjects:
     Type: Camera
     Com_Transform:
       Translation: [4.9944396, 4.9944396, 0]
-      Rotation: [1.54311216, -75.3619843, -1.87771666]
-      Scale: [0.999619842, 0.999873042, 0.999917984]
+      Rotation: [1.54311204, -75.3619843, -1.87771618]
+      Scale: [0.999619782, 0.999873042, 0.999917984]
     IsWait: false
     IsBack: false
     MoveTime: 5
     WaitTime: 0
     Movie: 1
     NextIdx: 0
+    Slerp: true
     SrcPosition: [5, 5, 0]
     DestPosition: [0, 0, 0]
     SrcLookPosition: [0, 0, 0]
@@ -201,7 +202,7 @@ GameObjects:
     Com_Transform:
       Translation: [-3.45907974, 2.72718154e-07, 4.04530668]
       Rotation: [0, -0, -90]
-      Scale: [1, 1.10000002, 1.09867227]
+      Scale: [1, 1.10000002, 1.09867215]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: untitled.fbx
