--- a/Assets/Scenes/DarkKnightDungeon.yaml
+++ b/Assets/Scenes/DarkKnightDungeon.yaml
@@ -3957,7 +3957,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4012,7 +4012,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4067,7 +4067,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4122,7 +4122,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4177,7 +4177,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4232,7 +4232,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4287,7 +4287,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4342,7 +4342,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4397,7 +4397,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4452,7 +4452,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4507,7 +4507,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4562,7 +4562,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4617,7 +4617,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4672,7 +4672,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4727,7 +4727,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4782,7 +4782,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4837,7 +4837,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4892,7 +4892,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -4947,7 +4947,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
@@ -5002,7 +5002,7 @@ GameObjects:
   - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
-    Layer: Default
+    Layer: O_Skull
     Instancing: false
     Type: Object
     PassIndex: 0
