--- a/Assets/Scenes/UrsaDungeonkimu.yaml
+++ b/Assets/Scenes/UrsaDungeonkimu.yaml
@@ -7,9 +7,9 @@ GameObjects:
     Instancing: false
     Type: Camera
     Com_Transform:
-      Translation: [0.989774048, 1, -2.91819239]
-      Rotation: [-179.999893, -18.7498322, -179.999893]
-      Scale: [0.999599934, 0.999857426, 0.999890447]
+      Translation: [0.991658866, 1, -2.93327093]
+      Rotation: [180, -18.8737812, 180]
+      Scale: [0.999601662, 0.999857426, 0.999890983]
     IsWait: true
     IsBack: false
     MoveTime: 1.5
@@ -1296,7 +1296,7 @@ GameObjects:
     NumOBB: 0
     Com_Transform:
       Translation: [-7.71003485, 3.02958258e-09, -0.893863142]
-      Rotation: [-1.11216405e-05, 82.4875717, -1.12273501e-05]
+      Rotation: [-1.11216386e-05, 82.4875717, -1.12273501e-05]
       Scale: [1.5, 1.29999995, 0.99999851]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Door\
@@ -1304,7 +1304,7 @@ GameObjects:
       HasCollider: false
       Equipment: false
     Translation: [-7.71003485, 3.02958258e-09, -0.893863142]
-    Rotation: [-1.11216405e-05, 82.4875717, -1.12273501e-05]
+    Rotation: [-1.11216386e-05, 82.4875717, -1.12273501e-05]
     Scale: [1.5, 1.29999995, 0.99999851]
     MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Door\
     MeshFileName: Door3.fbx
@@ -1667,7 +1667,7 @@ GameObjects:
     Com_Transform:
       Translation: [-1.29782748, 0, 3.21683025]
       Rotation: [90, -0, 0]
-      Scale: [0.299978882, 0.300000012, 0.300000012]
+      Scale: [0.299978852, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1675,7 +1675,7 @@ GameObjects:
       Equipment: false
     Translation: [-1.29782748, 0, 3.21683025]
     Rotation: [90, -0, 0]
-    Scale: [0.299978882, 0.300000012, 0.300000012]
+    Scale: [0.299978852, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1692,7 +1692,7 @@ GameObjects:
     Com_Transform:
       Translation: [-2.97619867, 0, 2.27278042]
       Rotation: [90, -0, 0]
-      Scale: [0.299972326, 0.300000012, 0.300000012]
+      Scale: [0.299972296, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1700,7 +1700,7 @@ GameObjects:
       Equipment: false
     Translation: [-2.97619867, 0, 2.27278042]
     Rotation: [90, -0, 0]
-    Scale: [0.299972326, 0.300000012, 0.300000012]
+    Scale: [0.299972296, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1717,7 +1717,7 @@ GameObjects:
     Com_Transform:
       Translation: [2.38819623, -0.00699390192, 1.11379468]
       Rotation: [90, -0, 0]
-      Scale: [0.299972504, 0.300000012, 0.300000012]
+      Scale: [0.299972475, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1725,7 +1725,7 @@ GameObjects:
       Equipment: false
     Translation: [2.38819623, -0.00699390192, 1.11379468]
     Rotation: [90, -0, 0]
-    Scale: [0.299972504, 0.300000012, 0.300000012]
+    Scale: [0.299972475, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1742,7 +1742,7 @@ GameObjects:
     Com_Transform:
       Translation: [-2.97583151, 1.37266554e-07, -3.1402936]
       Rotation: [90, -0, 0]
-      Scale: [0.299962789, 0.300000012, 0.300000012]
+      Scale: [0.299962759, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1750,7 +1750,7 @@ GameObjects:
       Equipment: false
     Translation: [-2.97583151, 1.37266554e-07, -3.1402936]
     Rotation: [90, -0, 0]
-    Scale: [0.299962789, 0.300000012, 0.300000012]
+    Scale: [0.299962759, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1767,7 +1767,7 @@ GameObjects:
     Com_Transform:
       Translation: [5.89712811, 1.10119771e-07, -3.25622416]
       Rotation: [90, -0, 0]
-      Scale: [0.299917549, 0.300000012, 0.300000012]
+      Scale: [0.299917519, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1775,7 +1775,7 @@ GameObjects:
       Equipment: false
     Translation: [5.89712811, 1.10119771e-07, -3.25622416]
     Rotation: [90, -0, 0]
-    Scale: [0.299917549, 0.300000012, 0.300000012]
+    Scale: [0.299917519, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1792,7 +1792,7 @@ GameObjects:
     Com_Transform:
       Translation: [4.24012089, 7.08392704e-08, -4.04402351]
       Rotation: [90, -0, 0]
-      Scale: [0.299980342, 0.300000012, 0.300000012]
+      Scale: [0.299980313, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1800,7 +1800,7 @@ GameObjects:
       Equipment: false
     Translation: [4.24012089, 7.08392704e-08, -4.04402351]
     Rotation: [90, -0, 0]
-    Scale: [0.299980342, 0.300000012, 0.300000012]
+    Scale: [0.299980313, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1817,7 +1817,7 @@ GameObjects:
     Com_Transform:
       Translation: [-7.04490614, 0.0625032261, -2.38052249]
       Rotation: [90, -0, 0]
-      Scale: [0.299979657, 0.300000012, 0.300000012]
+      Scale: [0.299979627, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1825,7 +1825,7 @@ GameObjects:
       Equipment: false
     Translation: [-7.04490614, 0.0625032261, -2.38052249]
     Rotation: [90, -0, 0]
-    Scale: [0.299979657, 0.300000012, 0.300000012]
+    Scale: [0.299979627, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1842,7 +1842,7 @@ GameObjects:
     Com_Transform:
       Translation: [0.142843485, -4.84576539e-08, -5.559834]
       Rotation: [90, -0, 0]
-      Scale: [0.299966216, 0.300000012, 0.300000012]
+      Scale: [0.299966186, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1850,7 +1850,7 @@ GameObjects:
       Equipment: false
     Translation: [0.142843485, -4.84576539e-08, -5.559834]
     Rotation: [90, -0, 0]
-    Scale: [0.299966216, 0.300000012, 0.300000012]
+    Scale: [0.299966186, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1892,7 +1892,7 @@ GameObjects:
     Com_Transform:
       Translation: [0.667874455, -1.39228632e-07, 3.18518066]
       Rotation: [90, -0, 0]
-      Scale: [0.299921691, 0.300000012, 0.300000012]
+      Scale: [0.299921662, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1900,7 +1900,7 @@ GameObjects:
       Equipment: false
     Translation: [0.667874455, -1.39228632e-07, 3.18518066]
     Rotation: [90, -0, 0]
-    Scale: [0.299921691, 0.300000012, 0.300000012]
+    Scale: [0.299921662, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1917,7 +1917,7 @@ GameObjects:
     Com_Transform:
       Translation: [6.12454319, 0.00708128279, 3.90228987]
       Rotation: [90, -0, 0]
-      Scale: [0.299830347, 0.300000012, 0.300000012]
+      Scale: [0.299830317, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi3.fbx
@@ -1925,7 +1925,7 @@ GameObjects:
       Equipment: false
     Translation: [6.12454319, 0.00708128279, 3.90228987]
     Rotation: [90, -0, 0]
-    Scale: [0.299830347, 0.300000012, 0.300000012]
+    Scale: [0.299830317, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi3.fbx
     HasCollider: false
@@ -1942,7 +1942,7 @@ GameObjects:
     Com_Transform:
       Translation: [-5.17473173, -1.37816713e-07, 4.51198959]
       Rotation: [90, -0, 0]
-      Scale: [0.299639434, 0.300000012, 0.300000012]
+      Scale: [0.299639404, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi3.fbx
@@ -1950,7 +1950,7 @@ GameObjects:
       Equipment: false
     Translation: [-5.17473173, -1.37816713e-07, 4.51198959]
     Rotation: [90, -0, 0]
-    Scale: [0.299639434, 0.300000012, 0.300000012]
+    Scale: [0.299639404, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi3.fbx
     HasCollider: false
@@ -2438,8 +2438,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-4.35752392, 4.18229628, -7.10967112]
-      Rotation: [27.5080013, 75.9247055, 0]
-      Scale: [0.0278681666, 0.617190659, 3.53095198]
+      Rotation: [11.3099327, -0, 0]
+      Scale: [0.0278681666, 0.617190599, 3.53095198]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2476,7 +2476,7 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-7.5999999, 4.06499147, 0.38495189]
-      Rotation: [27.5080109, 75.9247055, 0]
+      Rotation: [11.3099318, -0, 0]
       Scale: [0.0270827468, 0.593636096, 2.95411062]
     Com_VIBuffer:
       {}
@@ -2514,8 +2514,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-3.42898369, 4.09444904, 6.71673107]
-      Rotation: [27.508007, 75.9246979, 0]
-      Scale: [0.0264321789, 0.494756788, 1.73253345]
+      Rotation: [11.3099327, -0, 0]
+      Scale: [0.0264321789, 0.494756788, 1.73253357]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2552,8 +2552,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [4.19999981, 4.10704279, 6.9000001]
-      Rotation: [27.508007, 75.9247055, 0]
-      Scale: [0.0264295731, 0.495222986, 1.73647141]
+      Rotation: [11.3099327, -0, 0]
+      Scale: [0.0264295731, 0.495222956, 1.73647141]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2590,8 +2590,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [8.3721447, 4.04717731, 0.21047309]
-      Rotation: [27.508007, 75.9247055, 0]
-      Scale: [0.0265204739, 0.486489236, 1.66091132]
+      Rotation: [11.3099327, -0, 0]
+      Scale: [0.0265204739, 0.486489207, 1.66091132]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2628,8 +2628,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [4.79500008, 4.20926952, -6.50600004]
-      Rotation: [27.508007, 75.9247055, 0]
-      Scale: [0.0265426952, 0.484223038, 1.63721108]
+      Rotation: [11.3099327, -0, 0]
+      Scale: [0.0265426952, 0.484223008, 1.63721108]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2667,7 +2667,7 @@ GameObjects:
     Com_Transform:
       Translation: [-4.31833315, 2.37372112, 5.73253393]
       Rotation: [90.221817, -25.6933441, -0.0962173268]
-      Scale: [2.0309186, 0.999991775, 1.15788722]
+      Scale: [2.0309186, 0.999991775, 1.1578871]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: Grass6.fbx
@@ -2675,7 +2675,7 @@ GameObjects:
       Equipment: false
     Translation: [-4.31833315, 2.37372112, 5.73253393]
     Rotation: [90.221817, -25.6933441, -0.0962173268]
-    Scale: [2.0309186, 0.999991775, 1.15788722]
+    Scale: [2.0309186, 0.999991775, 1.1578871]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: Grass6.fbx
     HasCollider: false
