--- a/Assets/Scenes/m_pxVerticesSY.yaml
+++ b/Assets/Scenes/m_pxVerticesSY.yaml
@@ -124,12 +124,12 @@ GameObjects:
     Layer: Default
     Instancing: false
     Type: Effect
-    PassIndex: 4
+    PassIndex: 8
     BillBord: false
     Com_Transform:
-      Translation: [0, -0.389472216, 0]
+      Translation: [0, 0, 0]
       Rotation: [0, -0, 0]
-      Scale: [0.200000003, 0.25, 0.200000003]
+      Scale: [0.191011414, 0.106229156, 0.0256026611]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: BombBeam2.fbx
@@ -137,59 +137,16 @@ GameObjects:
       EffectFilePath: ""
     Effect_Setting:
       TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_gradient_light02_TEX_CJS_Warp.png
+      TextureMaskPath: ..\..\Assets\Textures\Effect\DooMask\FX_FakeLight_002_TEX_HKB.png
       TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_AuraTile_001_TEX_KKJ1.png
-      TextureNormalPath: ""
-      ScrollSpeedX: [0.600000024, 0.699999988, 0]
-      ScrollSpeedY: [0.5, 0.800000012, 2.29999995]
-      Distortion1: [0.100000001, 1]
-      Distortion2: [0.200000003, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 1.60000002
-      DistortionBias: 0.100000001
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 1.79999995
-      FadeIn: false
-      FadeInDuration: 0.5
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0.804347813, 0.804347813, 0.804347813, -0.100000001]
-    Children:
-      - 1942561307840455863
-  - Name: DropSphere
-    UUID: 1942561307840455863
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [0, -0.0520000011, 0]
-      Rotation: [0, -0, 0]
-      Scale: [0.5, 0.5, 0.5]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Effect\
-      MeshFileName: sphere.fbx
-      HasCollider: false
-      EffectFilePath: ""
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\smoke.png
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\222.tga
       TextureNormalPath: ""
       ScrollSpeedX: [0, 0, 0]
       ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
       Distortion1: [0.100000001, 0.200000003]
       Distortion2: [0.100000001, 0.300000012]
       Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.400000006
-      DistortionBias: 0.100000001
+      DistortionScale: 0.699999988
+      DistortionBias: 0.300000012
       FadeOut: false
       FadeOutDuration: 0
       FadeOutStratTime: 0
@@ -201,7 +158,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
-      OffsetColor: [0.731884062, 0.731884062, 0.731884062, 0.170000002]
+      OffsetColor: [1, 1, 1, -0.25]
   - Name: Empty Object
     UUID: 13455082856678141479
     Active: true
@@ -240,3 +197,41 @@ GameObjects:
       SpriteTotal: 0
       SpriteSpeed: 5
       OffsetColor: [1, 0.905797124, 0.905797124, 0.280000001]
+  - Name: O_BossItemBox
+    UUID: 9040300903596245969
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [0, 0, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\ItemBox\
+      MeshFileName: BossItem.fbx
+      HasCollider: false
+      Equipment: false
+    RenderGroup: 1
+    FrustumRange: 1
+  - Name: O_BasicItemBox
+    UUID: 9097963168757959407
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [0, 0, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\ItemBox\
+      MeshFileName: MonItem.fbx
+      HasCollider: false
+      Equipment: false
+    RenderGroup: 1
+    FrustumRange: 1
